// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor /> Tests should render correctly 1`] = `
<Anchor
  href="#"
  style={null}
>
  <div>
    Link
  </div>
</Anchor>
`;

exports[`<Anchor /> Tests should render correctly with all props 1`] = `
<Anchor
  href="http://www.google.com"
  onClick={[MockFunction]}
  style={null}
  title="Anchor title"
>
  <div>
    Link
  </div>
</Anchor>
`;
